--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -12,8 +12,12 @@
   <tbody>
     <% @topics.each do |topic| %>
       <tr>
-        <td><%= topic.title %></td>
-        <td><%= topic.description %></td>
+        <!--###610JS-->
+        <!--<td><%= topic.title %></td>-->
+        <td><%= link_to topic.title, topic %></td>
+        <!--<td><%= topic.description %></td>-->
+        <th>Description</th>
+        <!--###610JE-->
         <td><%= pluralize(topic.votes.count, "vote") %></td>
         <td><%= button_to '+1', upvote_topic_path(topic), method: :post %></td>
         <td><%= link_to 'Show', topic %></td>
