--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -17,6 +17,7 @@
         <td><%= topic.description %></td>
         <td><%= pluralize(topic.votes.count, "vote") %></td>
         <td><%= button_to '+1', upvote_topic_path(topic), method: :post %></td>
+        <td><%= button_to '-1', downvote_topic_path(topic), method: :delete %></td>
         <td><%= link_to 'Delete', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <!--###610JE-->
       </tr>
