--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -11,15 +11,22 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
+  <div class="field row">
+    <div class="col-md-2"></div>
+    <div class="col-md-4"><%= f.label :title %></div>
+    <div class="col-md-4"><%= f.text_field :title %></div>
+    <div class="col-md-2"></div>
   </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
+  <div class="field row">
+    <div class="col-md-2"></div>
+    <div class="col-md-4"><%= f.label :description %></div>
+    <div class="col-md-4"><%= f.text_area :description %></div>
+    <div class="col-md-2"></div>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="actions row">
+    <div class="col-md-2"></div>
+    <div class="col-md-4"></div>
+    <div class="col-md-4"><%= f.submit %></div>
+    <div class="col-md-2"></div>
   </div>
 <% end %>
