--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,31 +1,41 @@
-<h1>Listing topics</h1>
-
+<div class="gd-title">
+<h1 class="gd-h1">Vote Topics!!</h1>
+</div>
+<div class="container">
 <table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+  <div class="row gd-tableTitle">
+    <div class="col-md-3"></div>
+    <div class="col-md-1">Title</div>
+    <div class="col-md-1">Description</div>
+    <div class="col-md-1">Votes</div>
+    <div class="col-md-1">Support</div>
+    <div class="col-md-1">Oppose</div>
+    <div class="col-md-1">Handling</div>
+    <div class="col-md-3"></div>
+  </div>
     <% @topics.each do |topic| %>
-      <tr>
+      <div class="row">
         <!--###610JS-->
-        <td><%= link_to topic.title, topic %></td>
-        <td><%= topic.description %></td>
-        <td><%= pluralize(topic.votes.count, "vote") %></td>
-        <td><%= button_to '+1', upvote_topic_path(topic), method: :post %></td>
-        <td><%= button_to '-1', downvote_topic_path(topic), method: :delete %></td>
-        <td><%= link_to 'Delete', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <div class="col-md-3"></div>
+        <div class="col-md-1"><%= link_to topic.title, topic %></div>
+        <div class="col-md-1" id="gd-topicTitle"><%= topic.description %></div>
+        <div class="col-md-1"><%= pluralize(topic.votes.count, "vote") %></div>
+        <div class="col-md-1"><%= button_to '+1', upvote_topic_path(topic), method: :post %></div>
+        <div class="col-md-1"><%= button_to '-1', downvote_topic_path(topic), method: :delete %></div>
+        <div class="col-md-1"><%= link_to 'Delete', topic, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+        <div class="col-md-3"></div>
         <!--###610JE-->
-      </tr>
+      </div>
     <% end %>
-  </tbody>
+
+
 </table>
 
 
 <br>
-
-<%= link_to 'New Topic', new_topic_path %>
+<div class="row">
+  <div class="col-md-3"></div>
+  <div class="col-md-6"><%= link_to 'New Topic', new_topic_path %></div>
+  <div class="col-md-3"></div>
+</div>
+</div>
