--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -1,5 +1,14 @@
-<h1>New topic</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
+      <div class="gd-newTopic">
+        <div class="gd-title"><h1 class="gd-h1">New topic</h1></div>
 
-<%= render 'form' %>
+        <%= render 'form' %>
 
-<%= link_to 'Back', topics_path %>
+        <%= link_to 'Back', topics_path %>
+      </div>
+    </div>
+    <div class="col-md-4"></div>
+</div>
